app/styles/main.scss
@import "compass_twitter_bootstrap";


/******************
*** COLORS
*******************/

// Complements (aqua & red)
$comp1-light: #37a5a5;
$comp1-dark: #376e6e;
$comp2-light: #dc3737;
$comp2-dark: #a53737;

// Accents (grey)
$acc-light: #dcdcdc;
$acc-dark: #6e6e6e;

// Highlight (yellow)
$high-bright: #fafa37;
$high-pastel: #dcdc6e;

// Crowd Factor (aqua, grey, red)
$cf-empty: #6edcdc;
$cf-few: #6ea5a5;
$cf-ave: #a5a5a5;
$cf-crowded: #a56e6e;
$cf-herd: #dc6e6e;
$cf-closed: #111111;

// Text
$text-dark: #373737;
$text-light: #fafafa;


/******************
*** MIXINS
*******************/

// page width/centering 
@mixin page-container {
  margin: 0 auto;
  width: 940px;
}

/******************
*** Global 
*******************/

body {
  background-image:url('../images/wavegrid.png');
  background-repeat:repeat;
  color: #373737;
}

hr {
  border: 1px solid $acc-dark;
  margin: 0 auto;
  width: 930px;
}

button {
  background-color: $comp1-dark !important;
  background-image: linear-gradient(to bottom, $comp1-light, $comp1-dark) !important;
  color: $high-bright !important;
  margin: -10px 0 0 10px;
}

a {
  text-decoration: none;
  
  &:hover {
    text-decoration: none;
  }
}

.main-col {
  display: inline-block;
  width: 70%;
  margin-top: 5px;
}

.side-col {
  display: inline-block;
  float: right;
}

.emphasize {
  color: $comp2-dark;
}

// Overide span margin left 20px;
[class*="span"] {
  margin: 0 !important;
}

.logo {
  height: 60px;
  padding: 0 8px 0 10px;
  width: 60px;
}

.b4cm-icon {
  height: 75px;
  width: 75px;
}

// Food, Social, Study Icons
.type-icon {
  background: black;
  display: inline-block;
  height: 60px;
  width: 60px;
}

.map {
  background: black;
  height: 200px;
  width: 250px;
  text-align: center;
  padding-top: 50px;
}

.ad-book {
  background: $acc-dark;
  border-radius: 10px;
  height: 180px;
  padding: 5px;
  text-align: center;
  width: 220px;

  a {
    text-decoration: none;
  }

  &:hover {
    h6 {
      color: $comp1-dark;
    }
  }

  h6 {
    color: $text-light;
    line-height: 15px;
  }

  img {
    margin-top: 10px;
    width: 80px;
  }
}

.rating {

  .stars {
    display: inline-block;
  }

  .review-count {
    display: inline-block;
    margin: 0 0 0 5px;
  }
}

.find-spot {
  margin: 0;

  h3 {
    display: inline;
  }

  select {
    //margin: -10px 0 0 10px;
    width: 80px;
  }

  input {
    width: 150px;
  }

  input, select {
    background-color: $acc-dark;
    border: 1px solid $comp1-dark;
    color: $text-light;
    margin: -10px 0 0 10px;
    text-align: center;
    //width: 150px;
  }
}

/******************
*** NAVBAR
*******************/
.navbar {
  background-color: $acc-dark;
}
.navbar-inner {
  @include page-container;
  background-color: $acc-dark !important;
  background-image: linear-gradient(to bottom, $acc-dark, #7e7e7e) !important;
  background-repeat: repeat-x;
  border-color: #252525;
  color: $text-dark;
  padding: 0;

  .brand {
    color: $comp2-dark;
    margin-left: -8px;

    .letter-b {
      color: $comp1-dark;
    }

    .num-four {
      color: $high-bright;
    }

    &:hover {
      color: $cf-few;

      .num-four, .letter-b {
        color: $cf-few;
      }
    }
  }

  .nav > li > a {
    color: $text-light;
  }

  .nav > li > a:hover {
    color: $cf-few;
  }

  .or {
    margin-top: 9px;
  }
}

/******************
*** HEADER
*******************/
.header {
  @include page-container;
  background-color: $acc-light;
  border-radius: 0 0 10px 10px;
  padding: 5px 0;

  .logo {
    margin-top: -44px;
  }

  .before {
    color: $comp1-dark;
    margin: 0;
  }

  .criticalmass {
    color: $comp2-dark;
    margin: -10px 0 4px 0;
  }

  a {
    text-decoration: none;
  }

  .tag-line {
    float: right;
    padding: 15px 485px 0 0;
  }

  .yelp {
    margin: 0;
  }

  .hate {
    margin: 0 0 0 24px;
  }

  div {
    display: inline-block;
  }

  .addthis_toolbox {
    float: right;
    margin: -65px 10px 0 0;
  }
}


/******************
*** FOOTER
*******************/
.footer {
  @include page-container;
  background-color: $acc-light;
  border-radius: 10px;
  padding: 11px 0 4px 0;
  text-align: center;

  li {
    display: inline;
    padding: 40px;

    a {
      color: $text-dark;
      font-size: 16px;

      &:hover {
        color: $cf-few;
        text-decoration: none; 
      }
    }
  }
}

/******************
*** MAIN PAGE 
*******************/
#main-page {
  text-align: center;

  .spot-types {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 0;

    .spots {
      padding: 0 0 0 10px;

      &:hover {
        cursor: pointer;
      }
    }

    .arrow-side {
      height: 50px;
      margin-top: -25px;
      padding: 0 5px 0 5px;
      width: 60px;
    }

    .arrow-center {
      height: 35px;
      width: 10px
    }

    .spot {
      display: inline-block;
      padding: 20px;
      margin: 0 10px;
    }

    .b4cm-icon {
      margin-top: -10px;
    }

    .center {
      display: inline-block;
    }

    h3 {
      display: inline-block;
    }

    .type-blurb {
      text-align: left;

      h4:nth-child(2) {
        margin: -10px 0 0 30px;
      }
    }
  }

  .nearby {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 25px 0;
  }

  .visualize {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 0;

    .visualize-tagline {
      text-align: left;
      margin: 0 auto;
    }

    h2 {
      margin: 0 0 0 16%;
    }

    h2:nth-child(2) {
      margin: 0 0 0 26%;
    }

  }
}


/******************
*** Listings Page 
*******************/
#listings-page {

  .title-bar {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;

    h2 {
      display: inline-block;
      padding: 0 0 0 20px;
    }

    h3 {
      display: inline-block;
      margin-left: 50px;
    }

    form {
      margin: 10px 0 0 100px;
    }

    h4 {
      display: inline-block;
    }

    select {
      margin: -10px 0 0 10px;
      width: 80px;
    }

    input {
      margin: -10px 0 0 10px;
      text-align: center;
      width: 150px;
    }

    button {
      margin: -10px 0 0 10px;
    }

    .add-spot {
      float: right;
      margin: 30px 22px 0 0;
    }
  }

 .page {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 10px;
  }
  
  .listings {
    
    h6 {
      margin-top: -25px;
    }
  }

  .listing {

    margin: 0 0 10px 0;
    padding: 0 10px;

    h4, h5 {
      margin: 0px;
    }

    .rank, .info, .crowd-bar, .watchers, .box {
      display: inline-block;
    }

    .rank {
      float: left;
    }

    .info {
      padding: 0 0 0 5px;
    }

    .watchers {
      margin: 0 0 0 5px;
    }

    .crowd-rank {
      margin: 5px 0 0 0;
    }

    .box {
      background: black;
      height: 30px;
      width: 30px;
    }

    .watchers {
      float: right;
      margin: 5px 0 0 10px;
    }

    hr {
      margin-top: 15px;
      width: 640px;
    }
  }

  .more {
    margin: -10px 0 0 0;

    a { 
      color: $text-dark;

      &:hover {
        color: $comp1-dark;
        cursor: pointer;
      }
    }
  }
}

/******************
*** Spot Page
*******************/
#spot-page {

  .title-bar {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;
  }

  .type {
    display: inline-block;
    font-size: 18px;
    font-weight: bold;
    padding: 10px;
    text-align: center;
  }

  .type:nth-child(2) {
    .b4cm-icon {
      height:  50px;
      width: 50px;
    }
    .type-text {
      font-size: 10px;
    }
  }

  .type:nth-child(3) {
    .b4cm-icon {
      height:  25px;
      width: 25px;
    }
    .type-text {
      font-size: 6px;
    }
  }

  .visualize {
    @include page-container;
    background-color: $acc-light;
    border-radius: 10px;
    padding: 20px 0;
  }

  .reviews {
    background-color: $acc-light;
    border-radius: 10px;
    padding: 10px 15px;
    margin: 30px 0 0 0;
  }

  .review-nums {
    margin-bottom: -10px;
  }

  .add-review {
    float: right;
    margin-top: -25px;
  }

  .nearby-type {
    
    div, h3 {
      display: inline-block;
      margin: 10px;
    }
  }

}

/******************
*** Sign Up Page 
*******************/
#sign-up {
  
  .login-method {
    display: inline-block;
  }
}

/******************
*** Sign In Page 
*******************/
#sign-in {
  
  .login-method {
    display: inline-block;
  }
}


/******************
*** Crowd Factor 
*******************/
.crowd-factor {
  background-image: linear-gradient(to bottom, #bbb, #aaa);
  border: 2px solid #6E6E6E;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
  margin: 20px auto;
  text-align: center;
  width: 80%;

  h3, h4 {
    display: inline-block;
    padding: 0 20px; 
    margin: 10px 0 0 0;
  }

  .timeslot {
    display: inline-block;
    margin-left: -27px;
    position: relative;
    text-align: left;
    
    &:first-of-type {
      z-index: 50;
      margin-left: 0;
    }

    &:nth-child(2) {
      z-index: 40;

      td {
        //background: red;
      }
    }

    &:nth-child(3) {
      z-index: 30;
    }

    &:nth-child(4) {
      z-index: 20;
    }
  }

  h5 {
    margin: 10px 0 0 0;
  }

  td {
    //background: blue;
    //border: 1px solid black;
    height: 20px;
    text-align: center;
    width: 20px;
  }

  .labels {
    margin: 0 0 0 20%;
    padding: 10px 0;
    width: 600px;

    h5 {
      display: inline-block;
    }

    .row1, .row2 {
      text-align: left;

      &>div {
        width: 160px;
        display: inline-block;
      }
    }

    .color {
      border: .5px solid black;
      border-radius: 5px;
      display: inline-block;
      height: 15px;
      margin-bottom: -3px;
      width: 15px;
    }

    .row2 {
      margin-top: -20px;
      padding-left: 15%;
    }
  }

  .marker {
    height: 17px;
    width: 17px;
  }

  .empty {
    color: $cf-empty;
  }

  .empty-square {
    background-color: $cf-empty;
  }

  .few {
    color: $cf-few;
  }

  .few-square {
    background-color: $cf-few;
  }

  .ave {
    color: $cf-ave;
  }

  .ave-square {
    background-color: $cf-ave;

  }

  .crowded {
    color: $cf-crowded;
  }

  .crowded-square {
    background-color: $cf-crowded;
  }

  .herd {
    color: $cf-herd;
  }

  .herd-square {
    background-color: $cf-herd;

  }

  .closed {
    closed: $cf-closed;
  }

  .closed-square {
    background-color: $cf-closed;
  }

  .empty-square, .few-square, .ave-square,
  .crowded-square, .herd-square, .closed-square {
    border: 1px solid black;
  }

  .saturday-row {
    border-top: 2px solid $high-bright;
  }
}

